changed package description

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "inputron",
+  "description": "AI Powered building blocks for your forms 🚀! Added auto complete , translation , enhancement and more to your text areas and inputs.",
   "private": false,
   "version": "0.0.1",
   "type": "module",
