--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -23,7 +23,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Caching node_modules for faster installs
       - name: Cache node modules
         uses: actions/cache@v2
         with:
@@ -35,19 +34,6 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # Caching build artifacts and ensuring 'dist/' is cached
-      - name: Cache build artifacts
-        id: build-cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            build/
-            dist/
-          key: ${{ runner.os }}-build-${{ hashFiles('src/**/*') }} # Include source files in hash to invalidate on change
-          restore-keys: |
-            ${{ runner.os }}-build-
-
-      # Run the build command, which should generate 'dist/'
       - name: Build the project
         run: npm run build
 
@@ -69,9 +55,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Ensure 'dist/' is present before publishing
-      - name: Verify dist folder
-        run: ls -la dist
+      - name: Install dependencies
+        run: npm install
+
+      # Rerun the build before publishing
+      - name: Build the project
+        run: npm run build
 
       - name: Set npm registry
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
@@ -81,8 +70,7 @@ jobs:
           GIT_COMMIT_HASH=$(git rev-parse --short HEAD)
           npm version $(node -p "require('./package.json').version + '-beta.${GIT_COMMIT_HASH}'") --no-git-tag-version
 
-      # Ensure build artifacts (dist) are published
-      - name: Use cached build
+      - name: Publish beta version
         run: npm publish --tag beta --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
@@ -95,14 +83,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Ensure 'dist/' is present before publishing
-      - name: Verify dist folder
-        run: ls -la dist
+      - name: Install dependencies
+        run: npm install
+
+      # Rerun the build before publishing
+      - name: Build the project
+        run: npm run build
 
       - name: Set npm registry
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
 
-      - name: Use cached build
+      - name: Publish production version
         run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
