--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -158,9 +158,13 @@ on:
           - major
           - minor
           - patch
+      changelog_message:
+        description: "Message to include in CHANGELOG.md"
+        required: false
+
 permissions:
-  contents: write   # This grants write access to the repository
-  
+  contents: write
+
 jobs:
   install-and-build:
     runs-on: ubuntu-latest
@@ -211,13 +215,24 @@ jobs:
       - name: Reinstall dependencies after version bump
         run: npm install
 
-      # Commit changes after both package.json and package-lock.json are updated
+      # Update changelog with user input or default message
+      - name: Update changelog
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          CHANGELOG_MESSAGE="${{ github.event.inputs.changelog_message }}"
+          if [ -z "$CHANGELOG_MESSAGE" ]; then
+            CHANGELOG_MESSAGE="Version bumped to $VERSION"
+          fi
+          echo "## $VERSION - $(date +'%Y-%m-%d')" >> CHANGELOG.md
+          echo "$CHANGELOG_MESSAGE" >> CHANGELOG.md
+
+      # Commit changes after both package.json, package-lock.json, and changelog are updated
       - name: Commit and push changes
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
-          git add package.json package-lock.json
-          git commit -m "ci: bump version to ${{ github.event.inputs.version_bump }}"
+          git add package.json package-lock.json CHANGELOG.md
+          git commit -m "ci: bump version to ${{ github.event.inputs.version_bump }} and update changelog"
           git push
 
       - name: Set npm registry
