--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/client.es.js",
       "require": "./dist/client.cjs.js"
     },
