--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -73,6 +73,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Build project
+        run: npm run build
+
       # Set npm registry with authentication
       - name: Set npm registry
         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
@@ -85,7 +88,9 @@ jobs:
       # Re-run npm install to update package-lock.json based on the bumped version
       - name: Update package-lock.json (production only)
         if: ${{ github.event.inputs.publish_job == 'production' }}
-        run: npm install
+        run:  | 
+          npm install
+          npm run build
 
       # Update changelog (production only)
       - name: Update changelog (production only)
