--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
   "module": "dist/index.es.js",
   "files": [
     "dist/",
-    "README.md"
+    "README.md",
+    "CHANGELOG.md"
   ],
   "types": "dist/index.d.ts",
   "exports": {
