--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@revivesoft/inputron",
   "description": "AI Powered building blocks for your forms 🚀! Added auto complete , translation , enhancement and more to your text areas and inputs.",
   "private": false,
-  "version": "1.4.12",
+  "version": "1.4.14",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +13,9 @@
     "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
+    "@lexical/history": "^0.19.0",
+    "@lexical/react": "^0.19.0",
+    "@lexical/rich-text": "^0.19.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^3.1.4",
     "@types/node": "^22.7.5",
@@ -20,17 +23,22 @@
     "clsx": "^2.1.1",
     "compression": "^1.7.4",
     "dotenv": "^16.4.5",
-    "lucide-react": "^0.452.0",
+    "draft-js": "^0.11.7",
+    "lexical": "^0.19.0",
+    "lucide-react": "^0.454.0",
     "next": "^14.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup-preserve-directives": "^1.1.2",
+    "slate": "^0.110.2",
+    "slate-react": "^0.111.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vite-plugin-dts": "^4.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/draft-js": "^0.11.18",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
