--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "main": "dist/index.js",
   "module": "dist/index.es.js",
